--- a/read.ipynb
+++ b/read.ipynb
@@ -9,8 +9,7 @@
     "# imports \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import geopandas as gpd"
+    "import seaborn as sns\n"
    ]
   },
   {
