--- a/read.ipynb
+++ b/read.ipynb
@@ -2,24 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "# Bibliotecas DASK\n",
+    "import dask\n",
+    "from dask.distributed import Client\n",
+    "import dask.dataframe as dd # similar ao pandas\n",
+    "import dask.multiprocessing\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dask = dd.read_csv('protests.csv')\n",
+    "df = df_dask.compute() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
+       "<div><strong>Dask DataFrame Structure:</strong></div>\n",
        "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
@@ -47,105 +72,72 @@
        "      <th>Source</th>\n",
        "      <th>Total Articles</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>npartitions=1</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-01-15</td>\n",
-       "      <td>Bowie State University, Bowie, MD</td>\n",
-       "      <td>1500.0</td>\n",
-       "      <td>Healthcare</td>\n",
-       "      <td>Healthcare; For Affordable Care Act</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>http://www.capitalgazette.com/news/ph-ac-cn-ac...</td>\n",
-       "      <td>1</td>\n",
+       "      <th></th>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>int64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-01-16</td>\n",
-       "      <td>Johnson City, TN</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>Civil Rights</td>\n",
-       "      <td>Civil Rights; For racial justice; Martin Luthe...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>http://www.johnsoncitypress.com/Local/2017/01/...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-01-16</td>\n",
-       "      <td>Indianapolis, IN</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>Environment</td>\n",
-       "      <td>Environment; For wilderness preservation</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>http://wishtv.com/2017/01/16/nature-groups-pro...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-01-16</td>\n",
-       "      <td>Cincinnati, OH</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Other (Martin Luther King Jr.)</td>\n",
-       "      <td>Civil Rights; For racial justice; Martin Luthe...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>http://www.cincinnati.com/picture-gallery/news...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-01-18</td>\n",
-       "      <td>Hartford, CT</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>Healthcare (Pro-Planned Parenthood)</td>\n",
-       "      <td>Healthcare; For Planned Parenthood</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>http://www.realhartford.org/2017/01/19/reprodu...</td>\n",
-       "      <td>1</td>\n",
+       "      <th></th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "</div>"
+       "</div>\n",
+       "<div>Dask Name: read-csv, 1 graph layer</div>"
       ],
       "text/plain": [
-       "         Date                           Location  Attendees  \\\n",
-       "0  2017-01-15  Bowie State University, Bowie, MD     1500.0   \n",
-       "1  2017-01-16                   Johnson City, TN      300.0   \n",
-       "2  2017-01-16                   Indianapolis, IN       20.0   \n",
-       "3  2017-01-16                     Cincinnati, OH        NaN   \n",
-       "4  2017-01-18                       Hartford, CT      300.0   \n",
-       "\n",
-       "              Event (legacy; see tags)  \\\n",
-       "0                           Healthcare   \n",
-       "1                         Civil Rights   \n",
-       "2                          Environment   \n",
-       "3       Other (Martin Luther King Jr.)   \n",
-       "4  Healthcare (Pro-Planned Parenthood)   \n",
-       "\n",
-       "                                                Tags Curated  \\\n",
-       "0                Healthcare; For Affordable Care Act     Yes   \n",
-       "1  Civil Rights; For racial justice; Martin Luthe...     Yes   \n",
-       "2           Environment; For wilderness preservation     Yes   \n",
-       "3  Civil Rights; For racial justice; Martin Luthe...     Yes   \n",
-       "4                 Healthcare; For Planned Parenthood     Yes   \n",
-       "\n",
-       "                                              Source  Total Articles  \n",
-       "0  http://www.capitalgazette.com/news/ph-ac-cn-ac...               1  \n",
-       "1  http://www.johnsoncitypress.com/Local/2017/01/...               4  \n",
-       "2  http://wishtv.com/2017/01/16/nature-groups-pro...               1  \n",
-       "3  http://www.cincinnati.com/picture-gallery/news...               1  \n",
-       "4  http://www.realhartford.org/2017/01/19/reprodu...               1  "
+       "Dask DataFrame Structure:\n",
+       "                 Date Location Attendees Event (legacy; see tags)    Tags Curated  Source Total Articles\n",
+       "npartitions=1                                                                                           \n",
+       "               object   object   float64                   object  object  object  object          int64\n",
+       "                  ...      ...       ...                      ...     ...     ...     ...            ...\n",
+       "Dask Name: read-csv, 1 graph layer"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('protests.csv')\n",
-    "df.head()"
+    "df_dask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = pd.read_csv('protests.csv')\n",
+    "# df.head()"
    ]
   },
   {
